--- a/members.html
+++ b/members.html
@@ -88,7 +88,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand fw-bold d-flex align-items-center" href="/">
+      <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html">
         <img src="assets/images/lab.png" alt="Lotter Lab" style="height: 2.8rem;">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -96,7 +96,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
           <li class="nav-item"><a class="nav-link" href="members.html">Members</a></li>
         </ul>
