--- a/research.html
+++ b/research.html
@@ -95,19 +95,15 @@
         <div class="publication-item mb-5">
           <div class="row">
             <div class="col-2">
-              <img src="assets/images/paper.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+              <img src="assets/images/paper_distinguishing.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
             </div>
             <div class="col-10">
-              <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
-              <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
-              <p class="mb-1 text-muted"><em>In Review 2025</em></p>
+              <h5 class="mb-2">Distinguishing between Rigor and Transparency in FDA Marketing Authorization of AI-enabled Medical Devices</h5>
+              <p class="mb-1">Abdul Rahman Diab, William Lotter</p>
+              <p class="mb-1 text-muted"><em>Radiology: Artificial Intelligence 2025</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://pubs.rsna.org/doi/10.1148/ryai.250369" class="text-decoration-none" target="_blank">paper</a> 
               </p>
-            </div>
           </div>
         </div>
 
@@ -120,12 +116,10 @@
             <div class="col-10">
               <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
               <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
-              <p class="mb-1 text-muted"><em>In Review 2025</em></p>
+              <p class="mb-1 text-muted"><em>Proceedings of Machine Learning for Health (ML4H) 2025</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://arxiv.org/pdf/2509.18015" class="text-decoration-none" target="_blank">pdf</a> | 
+                <a href="https://arxiv.org/pdf/2509.18015" class="text-decoration-none" target="_blank">arXiv</a> 
               </p>
             </div>
           </div>
@@ -135,17 +129,16 @@
         <div class="publication-item mb-5">
           <div class="row">
             <div class="col-2">
-              <img src="assets/images/paper.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+              <img src="assets/images/paper_comparing.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
             </div>
             <div class="col-10">
-              <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
-              <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
-              <p class="mb-1 text-muted"><em>In Review 2025</em></p>
+              <h5 class="mb-2">Comparing Computational Pathology Foundation Models using Representational Similarity Analysis</h5>
+              <p class="mb-1">Vaibhav Mishra, William Lotter</p>
+              <p class="mb-1 text-muted"><em>Proceedings of Machine Learning for Health (ML4H) 2025</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://arxiv.org/pdf/2509.15482" class="text-decoration-none" target="_blank">pdf</a> | 
+                <a href="https://arxiv.org/abs/2509.15482" class="text-decoration-none" target="_blank">arXiv</a> | 
+                <a href="https://github.com/lotterlab/cpath_rsa" class="text-decoration-none" target="_blank">code</a> 
               </p>
             </div>
           </div>
@@ -155,17 +148,14 @@
         <div class="publication-item mb-5">
           <div class="row">
             <div class="col-2">
-              <img src="assets/images/paper.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+              <img src="assets/images/paper_influence.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
             </div>
             <div class="col-10">
-              <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
-              <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
-              <p class="mb-1 text-muted"><em>In Review 2025</em></p>
+              <h5 class="mb-2">Influence of Mammography Acquisition Parameters on AI and Radiologist Interpretive Performance</h5>
+              <p class="mb-1">William Lotter, Daniel S. Hippe, Thomas Oshiro, Kathryn P. Lowry, Hannah S. Milch, Diana L. Miglioretti, Joann G. Elmore, Christoph I. Lee, William Hsu</p>
+              <p class="mb-1 text-muted"><em>Radiology: Artificial Intelligence 2025</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://pubs.rsna.org/doi/full/10.1148/ryai.240861" class="text-decoration-none" target="_blank">paper</a> 
               </p>
             </div>
           </div>
@@ -175,17 +165,15 @@
         <div class="publication-item mb-5">
           <div class="row">
             <div class="col-2">
-              <img src="assets/images/paper.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+              <img src="assets/images/paper_AdvDINO.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
             </div>
             <div class="col-10">
-              <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
-              <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
+              <h5 class="mb-2">AdvDINO: Domain-Adversarial Self-Supervised Representation Learning for Spatial Proteomics</h5>
+              <p class="mb-1">Stella Su, Marc Harary, Scott J. Rodig, William Lotter</p>
               <p class="mb-1 text-muted"><em>In Review 2025</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://arxiv.org/pdf/2508.04955" class="text-decoration-none" target="_blank">pdf</a> | 
+                <a href="https://arxiv.org/abs/2508.04955" class="text-decoration-none" target="_blank">arXiv</a> 
               </p>
             </div>
           </div>
@@ -195,17 +183,14 @@
         <div class="publication-item mb-5">
           <div class="row">
             <div class="col-2">
-              <img src="assets/images/paper.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+              <img src="assets/images/paper_How_AI_is_used.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
             </div>
             <div class="col-10">
-              <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
-              <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
-              <p class="mb-1 text-muted"><em>In Review 2025</em></p>
+              <h5 class="mb-2">How AI is used in FDA-authorized medical devices: a taxonomy across 1,016 authorizations</h5>
+              <p class="mb-1">Rohan Singh, Monika Bapna, Abdul Rahman Diab, Emily S. Ruiz, William Lotter</p>
+              <p class="mb-1 text-muted"><em>npj Digital Medicine 2025</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://www.nature.com/articles/s41746-025-01800-1" class="text-decoration-none" target="_blank">paper</a> 
               </p>
             </div>
           </div>
@@ -215,17 +200,15 @@
         <div class="publication-item mb-5">
           <div class="row">
             <div class="col-2">
-              <img src="assets/images/paper.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+              <img src="assets/images/paper_Pan-cancer.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
             </div>
             <div class="col-10">
-              <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
-              <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
-              <p class="mb-1 text-muted"><em>In Review 2025</em></p>
+              <h5 class="mb-2">Pan-cancer spatial characterization of key immune biomarkers in the tumor microenvironment</h5>
+              <p class="mb-1">James R. Lindsay, Jennifer Altreuter, Joao V. Alessi, Jason L. Weirather, Anita Giobbie-Hurder, Ian Dryg, Katharina Hoebel, Bijaya Sharma, Kristen Felt, F. Stephen Hodi, Neal Lindeman, Lynette M. Sholl, Ethan Cerami, Jonathan A. Nowak, Mark M. Awad, Scott J. Rodig, William Lotter</p>
+              <p class="mb-1 text-muted"><em>Cell Reports Medicine 2025</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://www.cell.com/cell-reports-medicine/fulltext/S2666-3791%2825%2900491-4" class="text-decoration-none" target="_blank">paper</a> |
+                <a href="https://github.com/lotterlab/time_spatial_factors" class="text-decoration-none" target="_blank">code</a>
               </p>
             </div>
           </div>
@@ -235,17 +218,15 @@
         <div class="publication-item mb-5">
           <div class="row">
             <div class="col-2">
-              <img src="assets/images/paper.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+              <img src="assets/images/paper_Acquisition.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
             </div>
             <div class="col-10">
-              <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
-              <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
-              <p class="mb-1 text-muted"><em>In Review 2025</em></p>
+              <h5 class="mb-2">Acquisition parameters influence AI recognition of race in chest x-rays and mitigating these factors reduces underdiagnosis bias</h5>
+              <p class="mb-1">William Lotter</p>
+              <p class="mb-1 text-muted"><em>Nature Communications 2024</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://www.nature.com/articles/s41467-024-52003-3" class="text-decoration-none" target="_blank">paper</a> |
+                <a href="https://github.com/lotterlab/cxr_tech_bias" class="text-decoration-none" target="_blank">code</a>
               </p>
             </div>
           </div>
@@ -255,17 +236,16 @@
         <div class="publication-item mb-5">
           <div class="row">
             <div class="col-2">
-              <img src="assets/images/paper.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+              <img src="assets/images/paper_Fluoroformer.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
             </div>
             <div class="col-10">
-              <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
-              <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
-              <p class="mb-1 text-muted"><em>In Review 2025</em></p>
+              <h5 class="mb-2">Fluoroformer: Scaling multiple instance learning to multiplexed images via attention-based channel fusion</h5>
+              <p class="mb-1">Marc Harary, Eliezer M. Van Allen, William Lotter</p>
+              <p class="mb-1 text-muted"><em>Findings Track, Machine Learning for Health (ML4H) 2024</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://arxiv.org/pdf/2411.08975" class="text-decoration-none" target="_blank">pdf</a> | 
+                <a href="https://arxiv.org/abs/2411.08975" class="text-decoration-none" target="_blank">arXiv</a> | 
+                <a href="https://github.com/lotterlab/fluoroformer" class="text-decoration-none" target="_blank">code</a> 
               </p>
             </div>
           </div>
@@ -275,17 +255,65 @@
         <div class="publication-item mb-5">
           <div class="row">
             <div class="col-2">
-              <img src="assets/images/paper.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+              <img src="assets/images/paper_Artificial Intelligence in Oncology.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
             </div>
             <div class="col-10">
-              <h5 class="mb-2">Beyond Diagnosis: Evaluating Multimodal LLMs for Pathology Localization in Chest Radiographs</h5>
-              <p class="mb-1">Advait Gosai*, Arun Kavishwar*, Stephanie L. McNamara, Soujanya Samineni, Renato Umeton, Alexander Chowdhury, William Lotter</p>
-              <p class="mb-1 text-muted"><em>In Review 2025</em></p>
+              <h5 class="mb-2">Artificial Intelligence in Oncology: Current Landscape, Challenges, and Future Directions</h5>
+              <p class="mb-1">William Lotter, Michael J. Hassett, Nikolaus Schultz, Kenneth L. Kehl, Eliezer M. Van Allen, Ethan Cerami</p>
+              <p class="mb-1 text-muted"><em>Cancer Discovery 2024</em></p>
               <p class="mb-0">
-                <a href="#" class="text-decoration-none">pdf</a> | 
-                <a href="#" class="text-decoration-none">arXiv</a> | 
-                <a href="#" class="text-decoration-none">code</a> | 
-                <a href="#" class="text-decoration-none">project website</a>
+                <a href="https://aacrjournals.org/cancerdiscovery/article-abstract/14/5/711/745040/Artificial-Intelligence-in-Oncology-Current" class="text-decoration-none" target="_blank">paper</a> 
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Publication 11 -->
+        <div class="publication-item mb-5">
+          <div class="row">
+            <div class="col-2">
+              <img src="assets/images/paper_clinician-AI.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+            </div>
+            <div class="col-10">
+              <h5 class="mb-2">The clinician-AI interface: intended use and explainability in FDA-cleared AI devices for medical image interpretation</h5>
+              <p class="mb-1">Stephanie L. McNamara, Paul H. Yi, William Lotter</p>
+              <p class="mb-1 text-muted"><em>npj Digital Medicine 2024</em></p>
+              <p class="mb-0">
+                <a href="https://www.nature.com/articles/s41746-024-01080-1" class="text-decoration-none" target="_blank">paper</a> | 
+                <a href="https://github.com/lotterlab/ai_cad_database" class="text-decoration-none" target="_blank">code</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Publication 12 -->
+        <div class="publication-item mb-5">
+          <div class="row">
+            <div class="col-2">
+              <img src="assets/images/paper_Beyond Structured Attributes.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+            </div>
+            <div class="col-10">
+              <h5 class="mb-2">Beyond Structured Attributes: Image-Based Predictive Trends for Chest X-Ray Classification</h5>
+              <p class="mb-1">Katharina V Hoebel*, Jesseba Fernando*, William Lotter</p>
+              <p class="mb-1 text-muted"><em>Medical Imaging with Deep Learning 2024</em></p>
+              <p class="mb-0">
+                <a href="https://openreview.net/pdf?id=Y15taNvfFN" class="text-decoration-none" target="_blank">pdf</a> | 
+                <a href="https://github.com/lotterlab/xray_generalization" class="text-decoration-none" target="_blank">code</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Publication 13 -->
+        <div class="publication-item mb-5">
+          <div class="row">
+            <div class="col-2">
+              <img src="assets/images/paper_Representing.png" alt="Paper thumbnail" class="img-fluid" style="max-width: 80px;">
+            </div>
+            <div class="col-10">
+              <h5 class="mb-2">Representing visual classification as a linear combination of words</h5>
+              <p class="mb-1">Shobhit Agarwal, Yevgeniy R. Semenov, William Lotter</p>
+              <p class="mb-1 text-muted"><em>Proceedings of Machine Learning for Health (ML4H) 2023</em></p>
+              <p class="mb-0">
+                <a href="https://arxiv.org/pdf/2311.10933" class="text-decoration-none" target="_blank">pdf</a> | 
+                <a href="https://arxiv.org/abs/2311.10933" class="text-decoration-none" target="_blank">arXiv</a>
               </p>
             </div>
           </div>
