--- a/members.html
+++ b/members.html
@@ -16,6 +16,14 @@
       font-family: 'Roboto', sans-serif;
     }
     
+    /* Hyperlink colors */
+    a {
+      color: #006599;
+    }
+    a:hover {
+      color: #f99c1c;
+    }
+    
     /* Navbar customizations */
     .navbar {
       background-color: transparent !important;
@@ -126,10 +134,10 @@
             <h6 class="text-muted mb-4">PI & Assistant Professor</h6>
             <p class="profile-meta mb-4">Bill is an Assistant Professor at the Dana-Farber Cancer Institute & the Harvard Medical School. He was previously the CTO & Co-Founder of DeepHealth Inc. (acquired by RadNet Inc.), where he led the development and large-scale deployment of FDA-cleared products that use AI to assist in mammogram interpretation. His AI/ML experience spans the domains of medical imaging, neuroscience, algorithmic trading, and sports analytics.</p>
             <div class="profile-icons mb-4">
-              <a href="#" aria-label="Email"><i class="bi bi-envelope-fill"></i></a>
-              <a href="#" aria-label="Google Scholar"><i class="ai ai-google-scholar"></i></a>
-              <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
-              <a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
+              <a href="mailto:lotterb@ds.dfci.harvard.edu" aria-label="Email"><i class="bi bi-envelope-fill"></i></a>
+              <a href="https://scholar.google.com/citations?user=NaSe78YAAAAJ&hl=en" aria-label="Google Scholar"><i class="ai ai-google-scholar"></i></a>
+              <a href="https://x.com/bill_lotter" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.linkedin.com/in/bill-lotter-62b81243/" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
             </div>
             <p class="profile-meta mb-0"><i class="bi bi-geo-alt-fill me-2"></i>LC-5117 , 360 Longwood Ave, Boston, MA 02215</p>
           </div>
@@ -145,10 +153,8 @@
             <h6 class="text-muted mb-4">PhD Student, Harvard-MIT HST</h6>
             <p class="profile-meta mb-4">Harvard-MIT HST</p>
             <div class="profile-icons mb-0">
-              <a href="#"><i class="bi bi-envelope-fill"></i></a>
-              <a href="#"><i class="ai ai-google-scholar"></i></a>
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="https://sites.mit.edu/alamane/"><i class="bi bi-envelope-fill"></i></a>
+              <a href="https://www.linkedin.com/in/abdallah-lamane-a7b81116a/"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -235,10 +241,8 @@
             <h6 class="text-muted mb-4">PhD Student</h6>
             <p class="profile-meta mb-4">Harvard AIM</p>
             <div class="profile-icons mb-0">
-              <a href="#"><i class="bi bi-envelope-fill"></i></a>
-              <a href="#"><i class="ai ai-google-scholar"></i></a>
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="mailto:lucia_morris@fas.harvard.edu"><i class="bi bi-envelope-fill"></i></a>
+              <a href="https://www.linkedin.com/in/luc1a/"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
