--- a/research.html
+++ b/research.html
@@ -104,6 +104,7 @@
               <p class="mb-0">
                 <a href="https://pubs.rsna.org/doi/10.1148/ryai.250369" class="text-decoration-none" target="_blank">paper</a> 
               </p>
+            </div>
           </div>
         </div>
 
