--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       font-family: 'Roboto', sans-serif;
     }
     
+    /* Hyperlink colors */
+    a {
+      color: #006599;
+    }
+    a:hover {
+      color: #f99c1c;
+    }
+    
     /* Navbar customizations */
     .navbar {
       background-color: transparent !important;
